--- a/Final - Broken Compass/knowledge.html
+++ b/Final - Broken Compass/knowledge.html
@@ -9,6 +9,7 @@
 
         <!-- title -->
         <title>The Broken Compass Collective</title>
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
         <!-- link to styles.css -->
         <link href="css/styles.css" type="text/css" rel="stylesheet">
@@ -60,9 +61,8 @@
                                 <h1 class="intro_title"><span>Knowledge</span> is Power!</h1>
                                 <p class="intro_text">
                                     Knowing what you are getting into is an absolute neccesity when you 
-                                    are venturing onto a trail or camping trip. Many trails can turn dangerous and 
-                                    even deadly depending on the conditions. Putting some time into learning the area or 
-                                    looking at maps could save your life.
+                                    are venturing onto a trail or camping trip. Many trails can turn dangerous depending on the conditions. 
+                                    Putting some time into learning the area or looking at maps could save your life.
                                 </p>
                         </div>
                     
@@ -70,7 +70,7 @@
                             <div class="weather_content">
                                 <h1>Check the Weather!</h1>
                                 <input type="text" id="zip_code" name="zip_code" placeholder="Enter Zip Code"></input>
-                                <button class="weather" onClick="getWeather()">Check Forecast</button>
+                                <button class="weather" onClick="getWeather()">Check Weather</button>
                                 <div id="weather_info">
                                     
                                 </div>
@@ -84,9 +84,8 @@
                                     </p>
                                 <h1>Animals</h1>
                                 <p>Knowing what types of animals are around in the area you are exploring is good to 
-                                    know especially when there can be potentially dangerous animals. Check for
-                                    rules and regulations with bear spray and keep an eye out for poisonous snakes
-                                    if you are in that type of area.
+                                    know especially when there can be potentially dangerous animals. Checking websites
+                                    for a specific area will generally have a section dedicated to wildlife.
                                 </p>    
                             </div>
                         </div>
